# telegram-question-whisper-bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: lint.yaml  style.yaml
docs/: CONTRIBUTING.md  DEPLOYMENT.md
docs/assets/: architecture.excalidraw
docs/infrastructure/: ARCHITECTURE.md  DATABASE.md
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
src/: __init__.py  __main__.py
src/core/: __init__.py
src/dialogs/: __init__.py
src/dialogs/anonymous_message/: __init__.py  dialog.py  state.py
src/dialogs/user/: __init__.py  dialog.py  url.py
src/domain/models/: __init__.py  anonymous_message.py  user.py
src/domain/services/: __init__.py  anonymous_message.py  user.py
src/domain/validators/: __init__.py  user.py
src/handlers/: __init__.py
src/handlers/commands/: __init__.py  start.py
src/handlers/errors/: __init__.py  error.py
src/handlers/messages/: __init__.py  message_reaction.py  reply_to_message.py  user_shared.py
src/infrastructure/settings/: __init__.py  telegram.py
src/infrastructure/sqlite/: __init__.py  engine.py  session.py
src/infrastructure/telegram/: __init__.py  localizer.py
src/middleware/: __init__.py  anonymous_message_service.py  anonymous_message_sqlite_repository.py  current_user.py  user_service.py  user_sqlite_repository.py
src/presentation/dialogs/: __init__.py  format_lazy_proxy.py
src/services/: __init__.py  anonymous_message.py  user.py
src/settings/: __init__.py  sqlite.py
src/sqlite/: __init__.py  base.py  engine.py  session.py
(+45 files in other folders)
